--- a/adplugdb/src/main/AndroidManifest.xml
+++ b/adplugdb/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.omicronapplications.adplugdb">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <service android:name="com.omicronapplications.adplugdb.AdPlugDbService"
             android:exported="false"/>
